--- a/css/style.css
+++ b/css/style.css
@@ -80,3 +80,36 @@ body {
 }
 
 /* /Selected copywriter */
+
+/* Selected copywriter posts */
+
+.selected-copywriter-posts {
+    display: none;
+}
+
+.selected-copywriter__posts {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.copywriter-post {
+    flex-basis: 45.5%;
+    margin-bottom: 1em;
+
+    border: 1px solid black;
+    padding: 18px;
+}
+
+.copywriter-post__title {
+    font-size: 1em;
+    font-weight: bold;
+    text-align: center;
+
+    margin-bottom: 1em;
+}
+.copywriter-post__body {
+    font-size: 1.1em;
+    text-align: justify;
+}
+
+/* /Selected copywriter posts */
