--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,9 @@ body {
 .selected-copywriter {
     display: none;
 }
+.selected-copywriter_active {
+    display: block;
+}
 
 .selected-copywriter__info {
     width: 100%;
@@ -83,8 +86,11 @@ body {
 
 /* Selected copywriter posts */
 
-.selected-copywriter-posts {
+.selected-copywriter__posts-block {
     display: none;
+}
+.selected-copywriter__posts-block_active {
+    display: block;
 }
 
 .selected-copywriter__posts {
